# VkEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Shaders/: common.glsl
Shaders/Debug/: DebugBuffers.glsl
Shaders/Maths/: common.glsl  quaternion.glsl  transforms.glsl
Shaders/Rendering/AmbientOcclusion/: AO_Common.glsl
Shaders/ShaderLib/: Bit.slang  Color.slang  ColorSpace.slang  CommonDefinitions.glsl  CommonUBO.glsl  CommonUBO.h  CommonUBO.slang  Hashing.slang  Random.slang  RayTracingCommon.glsl  RayTracingCommon.slang  Template.glsl  Texturing.slang  bindings  common.glsl  common.slang  constants  core  core.glsl  hash.glsl  interop_cpp.glsl  interop_glsl_cpp  interop_slang_cpp  random.glsl  span.slang
Shaders/ShaderLib/Debug/: String.glsl  (+8 more)
Shaders/TemplateImpl/: hash.glsl  pushToDebugImpl.glsl
Shaders/ToneMap/: GammaCorrection.comp
projects/: CMakeLists.txt
projects/App0/: main.cpp
projects/BSDF/: BSDFViewer.cpp  BSDFViewer.hpp  main.cpp
projects/BSDF/Shaders/: Bindings.glsl  ComputeFunctions.comp  ComputeFunctions.glsl  ComputeStatistics.comp  RenderInputVector.glsl  RenderSphericalFunction3D.glsl  SphericalFunctions.glsl
projects/Cloth/: common.glsl  main.cpp  updateSpringMass2D.comp
projects/Flotsam/: cube.vert  water.geom  water.vert
projects/GOL/: render.comp  render.frag
projects/Paint/: render.frag  render.geom
projects/Particules/: initParticules.comp  render.vert  render2D.geom  render2D.mesh  render3D.frag  render3D.geom  update.comp
projects/Particules/sim2D/: main.cpp
projects/Particules/sim3D/: main.cpp
projects/RenderLib/: AmbientOcclusion.cpp  AmbientOcclusion.hpp  DepthOfField.cpp  DepthOfField.hpp  LightTransport.cpp  LightTransport.hpp  PicInPic.cpp  PicInPic.hpp  Renderer.cpp  Renderer.hpp  TemporalAntiAliasingAndUpscaler.cpp  TemporalAntiAliasingAndUpscaler.hpp
projects/RenderLib/RenderLibShaders/: IndirectCommon.glsl  IndirectCommon.slang  RasterSceneDepth.vert  RasterSceneDepth.vert.slang  RasterSceneGBuffer.frag  RasterSceneGBuffer.vert  RenderIndirect.frag.slang  RenderIndirect.vert  common.slang  render.frag.slang  render.vert  shading.glsl  shading.slang  shadingDefinitions.h
projects/RenderLib/RenderLibShaders/RT/: BDPT.slang  Common.slang  LightTracing.slang  PathTracing.comp  PathTracing.slang  ResolveLightTracing.slang  TraceRT.slang  VisibilityRT.slang
projects/RenderLib/RenderLibShaders/TAAU/: TAAU.comp
projects/RenderLib/Shaders/: RasterGBuffer.vert  RasterSceneDepth.vert  RenderIndirect.frag  RenderIndirect.vert  ShadeFromGBuffer.comp  common.glsl  render.frag  render.vert  shading.glsl
projects/RenderLib/Shaders/DOF/: DepthOfField.comp  DepthOfField.glsl
projects/RenderLib/Shaders/RT/: PathTracing.comp
projects/RenderLib/Shaders/RenderLib/: PrepareIndirectDrawList.slang  RasterGBuffer.vert  RasterSceneDepth.frag.slang  RasterSceneDepth.vert.slang  RasterSceneGBuffer.frag  RenderIndirect.frag.slang  RenderIndirect.vert.slang  ShadeFromGBuffer.comp  common.slang  render.frag.slang  render.vert.slang  shading.glsl  shading.slang
projects/RenderLib/Shaders/RenderLib/RT/: BDPT.slang  Common.slang  LightTracing.slang  PathTracing.slang  ResolveLightTracing.slang
projects/Renderer/: AmbientOcclusion.cpp  AmbientOcclusion.hpp  IndirectCommon.glsl  MountingPoints.txt  PicInPic.cpp  PicInPic.hpp  PrepareIndirectDrawList.comp  RasterGBuffer.frag  RasterGBuffer.vert  RasterSceneDepth.frag  RasterSceneDepth.vert  RasterSceneGBuffer.frag  RasterSceneGBuffer.vert  RenderIndirect.frag  RenderIndirect.vert  Renderer.cpp  Renderer.hpp  ShadeFromGBuffer.comp  TemporalAntiAliasingAndUpscaler.cpp  TemporalAntiAliasingAndUpscaler.hpp  main.cpp  render.frag  render.vert  shading.glsl
projects/Renderer/Shaders/: PrepareIndirectDrawList.comp  RasterSceneDepth.vert  RasterSceneGBuffer.vert  RenderIndirect.vert  ShadeFromGBuffer.comp  common.glsl  render.geom  render.vert  shading.glsl  test.slang
projects/Renderer/Shaders/RT/: PathTracing.comp
projects/Renderer/Shaders/TAAU/: TAAU.comp
projects/Test/: helper.cpp  helper.hpp  main.cpp
scripts/: extractFormatsContiguousMap.py  extractFormatsDetails.py  extractFormatsName.py  formats.txt  generateGLSLTemplates.py  generateRelease.py
src/App0/: main.cpp
src/Cloth/: common.glsl  main.cpp  renderSpringMass2D.vert  updateSpringMass2D.comp
src/Core/: AbstractInstance.hpp  Buffer.cpp  Buffer.hpp  Camera2D.hpp  Command.cpp  Command.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  ComputeCommand.cpp  ComputeCommand.hpp  DefinitionMap.cpp  DefinitionMap.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DeviceCommand.cpp  DeviceCommand.hpp  DynamicValue.hpp  ExecutionContext.cpp  ExecutionContext.hpp  Executor.cpp  Executor.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsCommand.cpp  GraphicsCommand.hpp  ImGuiApp.cpp  ImGuiApp.hpp  Image.cpp  Image.hpp  ImageAndView.cpp  ImageAndView.hpp  ImageView.cpp  (+47 more)
src/Flotsam/: common.glsl  cube.frag  cube.geom  main.cpp  water.comp  water.frag  water.geom  water.vert
src/GOL/: init_grid.comp  main.cpp  mouse_update.comp  render.comp  render.frag  render.vert  update.comp
src/Paint/: main.cpp  render.vert
src/Particules/: common.glsl  initCommonRules.comp  initParticules.comp  main.cpp  render.frag  render.geom  render2D.mesh  render3D.frag  render3D.geom  render3D.glsl  update.comp
src/Renderer/: AmbientOcclusion.cpp  AmbientOcclusion.hpp  DebugRenderer.cpp  DebugRenderer.hpp  PicInPic.cpp  PicInPic.hpp  RasterGBuffer.frag  RasterGBuffer.vert  RenderObjects.hpp  Renderer.cpp  Renderer.hpp  ShadeFromGBuffer.comp  Show3DBasis.glsl  common.glsl  main.cpp  render.frag  render.vert  shading.glsl
src/Shaders/: CopyBufferToImage2DArray.comp  DebugBuffers.glsl  FastPiP.comp  RayTracingCommon.glsl  RenderDebug.glsl  RenderDebugStrings.glsl  RenderRect.glsl  String.glsl  common.glsl  hash.glsl  random.glsl  transforms.glsl
src/Test/: main.cpp
src/Utils/: stl_extension.hpp
(+609 files in other folders)
